--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <h1>
+      This is my first GitHub Pages website for Designing Software for the Web. -Dane
+    </h1>
+  </head>
+  <body>
+    
+  </body>
+</html>
