--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <h1>
-      This is my first GitHub Pages website for Designing Software for the Web. \n-Dane
+      This is my first GitHub Pages website for Designing Software for the Web. <br>-Dane
     </h1>
   </head>
   <body>
