--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
   <head>
     <h1>
-      This is my first GitHub Pages website for Designing Software for the Web. </br>-Dane
+      
     </h1>
   </head>
   <body>
-    
+    <p>
+      This is my first GitHub Pages website for Designing Software for the Web. <br>-Dane
+    </p>
   </body>
 </html>
